subprojects {
    group = 'org.intermine'
    version '5.1.0'

    apply plugin: "java"
    apply plugin: "maven-publish"
    apply plugin: "signing"
    apply plugin: "checkstyle"
    apply plugin: "idea"

    sourceCompatibility = 1.8
    targetCompatibility = 1.8

    repositories {
        mavenLocal()
        mavenCentral()
        flatDir {
            dirs '../libs'
        }
    }

    configurations {
        configureEach {
            resolutionStrategy {
                force 'org.apache.logging.log4j:log4j-1.2-api:2.17.1'
            }
        }
    }

    if (it.name != 'intermine-resources') {
        dependencies {
            implementation 'org.apache.ant:ant:1.10.15'
            implementation 'org.apache.logging.log4j:log4j-1.2-api:2.17.1'
            implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.17.1'
            testImplementation 'junit:junit:4.8.2'
        }

        if (it.name != 'intermine-testresources') {
            dependencies {
                implementation project(':intermine-resources')
            }
        }
    }

    // see http://blog.joda.org/2014/02/turning-off-doclint-in-jdk-8-javadoc.html
    tasks.withType(Javadoc).configureEach {
        options.addStringOption('Xdoclint:none', '-quiet')
    }

    checkstyle {
        toolVersion = '7.8.1'
        configFile = file("${rootDir}/../config/checkstyle/checkstyle.xml")
        sourceSets = [sourceSets.main]
        showViolations = true
        ignoreFailures = false
        maxWarnings = 0
        //reportsDir = file("$project.rootDir/reports/checkstyle/$project.name")
        configProperties = [
            'checkstyle.header.file': "${rootDir}/../config/checkstyle/copyright_header.txt",
            'suppressionFile': "${rootDir}/../config/checkstyle/suppressions.xml"
        ]
    }

    def excludePattern = 'build/generated-src/antlr/main/'
    def excludePatternAntStyle = '**/' + excludePattern + '*'

    checkstyleMain {
        exclude excludePatternAntStyle
        source = fileTree('src/main') {
            includes = ['**/*.java']
            excludes = ['**/org/intermine/model/fulldata/**', '**/org/intermine/api/userprofile/**', 'build/**']
        }
    }

    checkstyleTest {
        enabled = false
    }

    tasks.withType(Test).configureEach {
        scanForTestClasses = false
        include '**/*Test.class'
        test.reports.html.required = true
        ignoreFailures = true

        // we have a system property that we need to get to the tests
        systemProperties System.properties

        testLogging {
            events "skipped", "failed"
            exceptionFormat "full"
            showExceptions = true
            showStackTraces = true
            showCauses = true
        }
    }

    tasks.register('sourcesJar', Jar) {
        dependsOn classes
        archiveClassifier = 'sources'
        from sourceSets.main.allSource
    }

    tasks.register('javadocJar', Jar) {
        dependsOn javadoc
        archiveClassifier = 'javadoc'
        from javadoc.destinationDir
    }

    // ---- Publishing (replacement for uploadArchives) ----
    publishing {
        publications {
            mavenJava(MavenPublication) {
                from components.java
                artifact sourcesJar
                artifact javadocJar

                pom {
                    name = project.name
                    packaging = 'jar'
                    description = 'InterMine core modules'
                    url = 'https://github.com/intermine/intermine'

                    scm {
                        connection = 'scm:git:git://github.com/intermine/intermine.git'
                        developerConnection = 'scm:git:ssh://github.com:intermine/intermine.git'
                        url = 'https://github.com/intermine/intermine'
                    }

                    licenses {
                        license {
                            name = 'LGPL-2.1'
                            url = 'https://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt'
                        }
                    }

                    developers {
                        developer {
                            name = 'InterMine core team and contributors'
                        }
                    }
                }
            }
        }

        repositories {
            maven {
                name = "OSSRH"
                url = version.endsWith("SNAPSHOT")
                        ? uri("https://s01.oss.sonatype.org/content/repositories/snapshots/")
                        : uri("https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/")
                credentials {
                    username = findProperty("ossrhUsername") ?: System.getenv("OSSRH_USERNAME")
                    password = findProperty("ossrhPassword") ?: System.getenv("OSSRH_PASSWORD")
                }
            }
        }
    }

    signing {
        required { gradle.taskGraph.hasTask("publish") }
        sign publishing.publications.mavenJava
    }
}

tasks.register('testReport', TestReport) {
    destinationDirectory = file("${layout.buildDirectory.get().asFile.path}/reports/allTests")
    // Include the results from the `test` task in all subprojects
    testResults.from(subprojects*.test*.binaryResultsDirectory)
}
